src/test/ui/issues/issue-33819.stderr
error[E0596]: cannot borrow immutable local variable `v` as mutable
  --> $DIR/issue-33819.rs:4:39
   |
LL |         Some(ref v) => { let a = &mut v; },
   |                                       ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
